name change on manifest.xml

--- a/IptvAPP/app/src/main/AndroidManifest.xml
+++ b/IptvAPP/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Fede APP TV"
+        android:label="IPTV App SandF"
         android:theme="@style/Theme.AppDeEjemplo">
 
         <!-- Configuración de la actividad principal -->
